--- a/html/html.html
+++ b/html/html.html
@@ -299,16 +299,16 @@
         
         <!-- 세션 및 모델 선택 -->
         <div class="session-container">
-            <select class="session-dropdown">
+            <div class="session-dropdown">
                 <option>세션 선택</option>
                 <option>세션 1</option>
                 <option>세션 2</option>
-            </select>
-            <select class="model-dropdown">
+            </div>
+            <div class="model-dropdown">
                 <option>모델 선택</option>
                 <option>모델 A</option>
                 <option>모델 B</option>
-            </select>
+            </div>
         </div>
         
         <!-- 채팅 인터페이스 -->
