Update Sidebar Tab Style

--- a/html/html.html
+++ b/html/html.html
@@ -300,14 +300,18 @@
         <!-- 세션 및 모델 선택 -->
         <div class="session-container">
             <div class="session-dropdown">
-                <option>세션 선택</option>
-                <option>세션 1</option>
-                <option>세션 2</option>
+                <select>
+                    <option>세션 선택</option>
+                    <option>세션 1</option>
+                    <option>세션 2</option>
+                </select>
             </div>
             <div class="model-dropdown">
-                <option>모델 선택</option>
-                <option>모델 A</option>
-                <option>모델 B</option>
+                <select>
+                    <option>모델 선택</option>
+                    <option>모델 A</option>
+                    <option>모델 B</option>
+                </select>
             </div>
         </div>
         
